meter en el for el metodo synchronized para cumplir con la parte del enunciado